[feat] 프롬프트 기법 적용